--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,8 @@ security:
                 # "app_login" is the name of the route created previously
                 login_path: app_login
                 check_path: app_login
+                username_parameter: '_username'  # Asegúrate de que coincida con el nombre en tu formulario
+                password_parameter: '_password'
             logout:
                 path: /logout
                 target: app_login
