--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,7 +6,13 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
+    App\Controller\TextController:
+        arguments:
+            $entityManager: '@doctrine.orm.entity_manager'
+            $textsRepository: '@App\Repository\TextsRepository'
+        tags:
+            - { name: 'controller.service_arguments' }
+
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
@@ -19,6 +25,9 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+
+  
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
